# FLUX

./: .gitignore  README.md  architecture.puml  build.py  flux.puml  main.py  main.pyw  pyproject.toml  receive.pyw  send.pyw  test.pyw  version.py
flux/: __init__.py  compression.py  core.py  crypto.py  network.py  ui.py  version.py
