[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux"
version = "0.1.0"
description = "A Python project for FLUX"
requires-python = ">=3.8"
authors = [
    { name = "Yashvardhan Singh", email = "vs21yash@gmail.com" }
]
dependencies = [
    "cryptography>=44.0.2",
    "flet[all]",
    "humanize",
    "pyinstaller",
    "pyperclip>=1.9.0",
    "zstandard>=0.23.0",
]
